2003-05-05  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Dave.

	- fixed 3241065 - popcap.com doesn't work in Safari, window.scrollBy fails to work in onLoad

	Make sure to do a layout before accessing any window properties or
	calling any window functions that require a layout to work
	properly.

        * khtml/ecma/kjs_window.cpp:
        (Window::get):
        (WindowFunc::tryCall):
        (Window::updateLayout):
        * khtml/ecma/kjs_window.h:

2003-05-05  David Hyatt  <hyatt@apple.com>

	Fix for 3247722. Make sure the grammar accepts properties with
	no values as declarations (albeit bad ones).
	
        Reviewed by darin

        * khtml/css/parser.cpp:
        * khtml/css/parser.y:

2003-05-05  David Hyatt  <hyatt@apple.com>

	Fix for 3248587.  Refine the crash fix for generated image
	content so that we still set the image's intrinsic width
	and height properly.
	
        Reviewed by john

        * khtml/rendering/render_image.cpp:
        (RenderImage::setPixmap):

2003-05-04  David Hyatt  <hyatt@apple.com>

	When using the content property in CSS, you can string together
	an intermixed list of strings and image URLs.  The old code
	only supported a single image URL, and if you tried to mix
	text in with images, you ended up crashing.

	The crash bug is 3248172.  The fix is to maintain a list of
	ContentData objects instead of just a single object and to
	ensure that a whole list of generated content gets made (and
	not just a single RenderObject).
	
        Reviewed by john

        * khtml/css/cssstyleselector.cpp:
	(applyRule)
        * khtml/rendering/render_container.cpp:
        (RenderContainer::insertPseudoChild):
        * khtml/rendering/render_image.cpp:
        (RenderImage::setStyle):
        (RenderImage::setContentObject):
        (RenderImage::updateFromElement):
        * khtml/rendering/render_image.h:
        * khtml/rendering/render_style.cpp:
        (RenderStyle::setContent):
        (ContentData::clearContent):